# dify-cli

./: .gitignore  README.md  SKILL.md  SPEC.md  pyproject.toml
dify_cli/: main.py
dify_cli/commands/: apply.py  edge.py  init.py  node.py  schema.py  spec.py  validate.py  var.py  version.py
dify_cli/core/: dsl.py  errors.py  graph.py  node_builder.py  schema_store.py  spec_format.py  spec_validator.py
dify_cli/schemas/: defaults-v0.5.0.json  v0.5.0.json
scripts/: extract_defaults.mjs  extract_schemas.py
skills/dify-cli/: README.md  SKILL.md
skills/dify-cli/references/: inspection-commands.md  spec-author-guide.md
tests/: test_apply.py  test_core.py  test_spec_validate.py
