[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dify-cli"
version = "0.1.0"
description = "Command-line tool for authoring Dify DSL (workflow / chatflow) files."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
dify-cli = "dify_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["dify_cli"]

[tool.hatch.build.targets.wheel.force-include]
"dify_cli/schemas" = "dify_cli/schemas"
